# OpenAlchemy

./: .gitignore  .isort.cfg  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .python-version  .readthedocs.yaml  .relint.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  codespell_allowed_words.txt  cspell.json  mypi.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md  FUNDING.yml  dependabot.yml
.github/workflows/: code-quality.yaml  periodic.yaml
docs/: requirements.txt
docs/source/: advanced.rst  cli.rst  conf.py  contents.rst  index.rst  package_service.rst  technical_details.rst
docs/source/examples/: alembic.rst  all_of.rst  composite_index.rst  composite_unique.rst  connexion.rst  default.rst  index.rst  inheritance.rst  json.rst  mixins.rst  namespaced.rst  nullable.rst  read_only.rst  ref.rst  server_default.rst  simple_example.rst  write_only.rst
docs/source/technical_details/: column_modifiers.rst  index.rst  mixins.rst  (+6 more)
example/: models.py  ref-example-spec.yml  ref_models.py
examples/: all-of-column-example-spec.yml  all-of-example-spec.yml  all-of-model-example-spec.yml  all_of_column_models.py  all_of_column_models_auto.py  all_of_model_models.py  all_of_model_models_auto.py  all_of_models.py  composite-index-example-spec.yml  composite_index_models.py  composite_index_models_auto.py  default-example-spec.yml  default_models.py  default_models_auto.py  ref-column-example-spec.yml  ref-model-example-spec.yml  ref-table-example-spec copy.yml  ref_column_models.py  ref_model_models.py  ref_model_models_auto.py  ref_models.py  ref_table_models.py  relationship-example-spec.yml  relationship-many-to-many-example-spec.yml  relationship-many-to-one-backref-example-spec.yml  relationship-many-to-one-custom-foreign-key-example-spec.yml  relationship-many-to-one-example-spec.yml  relationship-many-to-one-not-nullable-example-spec.yml  relationship-one-to-many-example-spec.yml  relationship-one-to-one-example-spec.yml  relationship_many_to_many_models.py  relationship_many_to_many_models_auto.py  relationship_many_to_many_models_traditional.py  relationship_many_to_one_backref_models.py  relationship_many_to_one_backref_models_auto.py  relationship_many_to_one_backref_models_traditional.py  relationship_many_to_one_custom_foreign_key_models.py  relationship_many_to_one_custom_foreign_key_models_auto.py  relationship_many_to_one_models.py  relationship_many_to_one_models_auto.py  (+13 more)
examples/alembic/: alembic.ini  patch  readme.md
examples/all_of/: column-example-spec.yml  column_models.py  column_models_auto.py  model-example-spec.yml  model_models_auto.py
examples/app/: api.py  api.yaml  app.py  database.py  models.py  models_autogenerated.py  readme.md  requirements.txt
examples/composite_index/: example-spec.yml  models.py  models_auto.py  models_traditional.py
examples/composite_unique/: example-spec.yml  models_auto.py  models_traditional.py
examples/default/: example-spec.yml  models_auto.py  models_traditional.py
examples/inheritance/: joined-example-spec.yml  joined_models.py  joined_models_auto.py  joined_models_traditional.py  single-example-spec.yml  single_models.py  single_models_auto.py  single_models_traditional.py
examples/json/: example-spec.yml  models_auto.py  models_traditional.py
examples/mixins/: example-spec.yml  models_traditional.py
examples/namespaced/: example-spec.yml
examples/read_only/: example-spec.yml  models_auto.py  models_traditional.py
examples/ref/: column-example-spec.yml  column_models_auto.py  model-example-spec.yml  model_models.py  model_models_auto.py
examples/remote/: example-spec.yml  models_auto.py  remote-example-spec.yml  url-example-spec.yml  url_models.py  url_models_auto.py
examples/server_default/: example-spec.yml  models_auto.py  models_traditional.py
examples/simple/: example-spec.yml  models_traditional.py
examples/write_only/: example-spec.yml  models_auto.py  models_traditional.py
open_alchemy/: __init__.py  cache.py  cli.py  column_factory.py  exceptions.py  mixins.py  model_factory.py  types.py  utility_base.py
open_alchemy/column_factory/: __init__.py  array_ref.py  backref.py  column.py  json.py  object_ref.py  read_only.py  relationship.py  simple.py  types.py
open_alchemy/facades/: __init__.py  models.py  sqlalchemy.py
open_alchemy/helpers/: __init__.py  all_of.py  backref.py  calculate_nullable.py  check_read_only.py  command.py  custom_python_types.py  define_all.py  foreign_key.py  inheritance.py  merge_all_of.py  oa_to_py_type.py  peek.py  peek_type.py  prepare_schema.py  property_.py  ref.py  relationship.py  resolve_ref.py  schema.py  type_.py
open_alchemy/models_file/: __init__.py  docs.py  types.py
open_alchemy/schemas/: __init__.py  association.py  backref.py  foreign_key.py
open_alchemy/table_args/: __init__.py  factory.py
open_alchemy/utility_base/: __init__.py  repr_.py  types.py
openapi_SQLAlchemy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
openapi_sqlalchemy/: __init__.py  column_factory.py  exceptions.py  model_factory.py  types.py
openapi_sqlalchemy/helpers/: __init__.py  add_logical_name.py  define_all.py  merge_all_of.py  peek_type.py  prepare_schema.py  prepare_spec.py  resolve_ref.py  testing_guard.py
tests/: .coveragerc  conftest.py  test_.py  test_build_examples  test_cli.py  test_column_factory.py  test_examples  test_input.py  test_integration.py  test_model_factory.py
tests/examples/: helpers.py  test_example_specs.py
tests/helpers/: test_add_logical_name.py  test_merge_all_of.py  test_peek_type.py  test_prepare_schema.py  test_prepare_spec.py  test_resolve_ref.py
tests/open_alchemy/: conftest.py  test_build.py  test_cache.py  test_column_factory.py  test_init.py  test_integration.py  test_mixins.py  test_model_factory.py  test_utility_base.py
tests/openapi_sqlalchemy/: conftest.py  test_column_factory.py  test_integration.py  test_model_factory.py
tests/production/: .gitignore  Pipfile  conftest.py  prepare.sh  template_test_app.py
(+422 files in other folders)
