[tool.poetry]
authors = ["David Andersson <anderssonpublic@gmail.com>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Natural Language :: English",
  "Topic :: Database",
  "Topic :: Database :: Front-Ends",
  "Topic :: Internet",
  "Typing :: Typed",
]
description = "Maps an OpenAPI schema to SQLAlchemy models."
documentation = "https://openapi-sqlalchemy.readthedocs.io/en/latest/index.html"
exclude = ["docs", "examples", "tests"]
homepage = "https://github.com/jdkandersson/OpenAlchemy"
include = ["open_alchemy", "*.json", "*.j2"]
keywords = ["OpenAPI", "SQLAlchemy", "Python", "models", "database"]
license = "Apache-2.0"
name = "OpenAlchemy"
packages = [
  {include = "open_alchemy"},
]
readme = "README.md"
repository = "https://github.com/jdkandersson/OpenAlchemy"
version = "2.5.0"

[tool.poetry.scripts]
openalchemy = "open_alchemy.cli:main"

[tool.poetry.dependencies]
Jinja2 = "^3"
SQLAlchemy = "^1.0"
jsonschema = "^3"
python = "^3.7"
sqlalchemy-stubs = ">=0.3,<0.5"
typing_extensions = {version = "^3.7.4", python = "<3.8"}

[tool.poetry.extras]
wheel = ["wheel"]
yaml = ["PyYAML"]

[tool.poetry.dev-dependencies]
Flask-SQLAlchemy = "^2"
PyYAML = "^5"
Sphinx = "^3"
alembic = "^1"
bandit = "^1"
black = "^21.5b1"
connexion = {version = "^2", extras = ["swagger-ui"]}
doc8 = "^0"
furo = "^2021.4.11b34"
isort = "^5"
mypy = "^0"
myst-parser = "^0"
pre-commit = "^2"
pydocstyle = "^6"
pylint = "^2"
pytest = "^6"
pytest-cov = "^2"
pytest-flake8 = "^1"
pytest-flask = "^1"
pytest-flask-sqlalchemy = "^1"
pytest-randomly = "^3"
rstcheck = "^3"
sphinx-autobuild = "^2021"
sphinx-copybutton = "^0"
sqlalchemy_mixins = "^1"
typeguard = "^2"
wheel = "^0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
